# DesignPatterns

./: CMakeLists.txt  README.md  main.cpp
AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  CMakeLists.txt  FactoryA.cpp  FactoryA.h  FactoryC.cpp  FactoryC.h
Adapter/: Adaptee.cpp  Adaptee.h  Adapter.cpp  Adapter.h  CMakeLists.txt  Target.cpp  Target.h
Bridge/: CMakeLists.txt  CircleShape.cpp  CircleShape.h  Color.cpp  Color.h  GreenColor.cpp  GreenColor.h  RedColor.cpp  RedColor.h  Shape.cpp  Shape.h
Decorator/: Airplan.cpp  Airplan.h  CMakeLists.txt  Car.cpp  Car.h  Changer.cpp  Changer.h  Transformer.cpp  Transformer.h
FactoryMethod/: CMakeLists.txt  Factory.cpp  Factory.h  FactoryA1.cpp  FactoryA1.h
Flyweight/: CMakeLists.txt  Police.cpp  Police.h  Role.cpp  Role.h  RoleFactory.cpp  RoleFactory.h  Terrorist.cpp  Terrorist.h
Product/: AbstractProductA.cpp  AbstractProductA.h  AbstractProductC.cpp  AbstractProductC.h  CMakeLists.txt  ProductA1.cpp  ProductA1.h  ProductA2.cpp  ProductA2.h  ProductC1.cpp  ProductC1.h  ProductC2.cpp  ProductC2.h
SimpleFactory/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h  ProductA.cpp  ProductA.h  ProductB.cpp  ProductB.h  SimpleFactory.cpp  SimpleFactory.h
